--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "target": "ES2017",
-    // "outDir": "dist",
+    "outDir": "dist",
     "sourceMap": true
   },
   "include": ["src/**/*.ts"]
