--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ src/**/*.js
 src/**/*.js.map
 src/**/*.d.ts
 dist
-# rollup plugin typescript2 cache folders 🙄
+# rollup plugin typescript2 cache folders
 .rts2_cache_cjs
 .rts2_cache_es
 .rts2_cache_umd
