--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   ],
   "scripts": {
     "start": "mkdir -p dist && browser-sync \"example\" \"dist\" --watch --no-ui --logLevel=silent",
-    "tsc": "tsc",
-    "tsc:watch": "npm run tsc -- -w",
     "microbundle": "microbundle",
     "microbundle:dev": "npm run microbundle -- --no-compress --format modern",
     "microbundle:watch": "npm run microbundle:dev -- --watch",
@@ -26,11 +24,8 @@
   "author": "Sergey Petushkov <petushkov.sergey@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "acorn": "^6.1.1",
     "browser-sync": "^2.26.7",
-    "microbundle": "^0.12.0",
-    "start-server-and-test": "^1.7.12",
-    "tslib": "^1.9.3",
-    "typescript": "^3.4.5"
+    "microbundle": "^0.13.3",
+    "start-server-and-test": "^1.7.12"
   }
 }
